logout, donated list in post, anonymous donate
Logout: Blacklisting token, deleting cookie.
Donated list in posts: Show people who donated along with their amount, name or anonymous, paginate.
Anonymous donate: User now can hide their identity before donate.